--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,9 @@ spring.mvc.view.suffix=.html
 
 
 #Hibernate
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #Hibernate auto ddl
 
 spring.jpa.hibernate.ddl-auto=update
 
-logging.level.org.hibernate.SQL=DEBUG
