--- a/pom.xml
+++ b/pom.xml
@@ -52,13 +52,7 @@
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
-				<artifactId>maven-archetype-plugin</artifactId>
-     <version>2.4</version>
-     <dependencies>
-     <dependency>
-          <groupId>org.apache.maven.shared</groupId>
-          <artifactId>maven-invoker</artifactId>
-          <version>2.2</version
+				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
