--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-
-spring.mvc.view.prifix=/views/
-spring.mvc.view.suffix=.html
-
+spring.datasource.url=jdbc:mysql://localhost:3306/newton?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.username=root
+spring.datasource.password=newton
 
 #Hibernate
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #Hibernate auto ddl
 
 spring.jpa.hibernate.ddl-auto=update
 
+logging.level.org.hibernate.SQL=DEBUG
